update to new module injection

--- a/source/allmodules/modules.styl
+++ b/source/allmodules/modules.styl
@@ -1,5 +1,9 @@
 @import '../pagemodule/styles.styl'
 @import '../backgroundmodule/styles.styl'
+@import '../demo1pagemodule/styles.styl'
+@import '../demo2pagemodule/styles.styl'
+@import '../demo3pagemodule/styles.styl'
+@import '../demo4pagemodule/styles.styl'
 @import '../homepagemodule/styles.styl'
 @import '../settingspagemodule/styles.styl'
 @import '../popupmodule/styles.styl'
