--- a/source/index/index.styl
+++ b/source/index/index.styl
@@ -121,4 +121,4 @@ input, textarea, select, button
 /*==============================================================================
 Including other components
 ==============================================================================*/
-@import 'modules.styl'
+@import '../allmodules/modules.styl'
