--- a/source/demo1pagemodule/styles.styl
+++ b/source/demo1pagemodule/styles.styl
@@ -7,3 +7,13 @@ demo1pagemodule Specific Styles
 = = = */
 #demo1pagecontent
     position relative
+
+    #somecontent
+        position: absolute
+        text-align: center
+        background-color: red
+        top 50%
+        left 50%
+        transform: translate(-50%, -50%)
+        width: 500px
+        font-size:  2vw
